NOJIRA remove use of sun-internal class in favor of commons-codec class
git-svn-id: https://source.jasig.org/uPortal/trunk@16054 f5dbab47-78f9-eb45-b975-e544023573eb